<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_horizontal_space"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/view_spacing"
        android:paddingRight="@dimen/view_spacing"
        android:text="@string/enable_gps_message" />

    <Button
        android:id="@+id/locSetting_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_settings" />

    <Button
        android:id="@+id/remind_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remind_me" />

    <Button
        android:id="@+id/doNotRemind_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_not_remind_me" />

</LinearLayout>