<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.oj.aroundme.MainActivity" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="50"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/action_search_null"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="50"
        android:title="@string/action_search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_changeLocation"
        android:orderInCategory="99"
        android:title="@string/change_location"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_DeleteHistory"
        android:orderInCategory="99"
        android:title="@string/delete_history"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>