<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_reviews"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/view_spacing"
    android:layout_marginStart="@dimen/key_line_1"
    android:layout_marginEnd="@dimen/key_line_1"
    android:layout_marginTop="@dimen/card_margin_top"
    android:clickable="true"
    android:elevation="@dimen/cardview_default_elevation"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin_top">


        <TextView
            android:id="@+id/reviews1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/blue_singleborder_a"
            android:paddingBottom="@dimen/view_spacing"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/view_spacing"
            android:text="@string/reviews"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reviews1"
            android:layout_margin="@dimen/view_spacing"
            android:contentDescription="@string/content"
            android:src="@drawable/ic_action_rating_important" />

        <TextView
            android:id="@+id/ratingNumberTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageRating"
            android:layout_toEndOf="@+id/imageRating"
            android:text="@string/number_here"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/navy"
            android:textSize="@dimen/item_title" />


        <RatingBar
            android:id="@+id/ratingbarSingle"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ratingNumberTV"
            android:layout_marginStart="@dimen/grid_spacing"
            android:layout_toEndOf="@+id/ratingNumberTV"
            android:isIndicator="true"
            android:numStars="5"
            android:paddingBottom="@dimen/button_margin"
            android:rating="1"
            android:stepSize="0.01" />

        <ImageView
            android:id="@+id/person1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageRating"
            android:contentDescription="@string/content"
            android:src="@drawable/ic_action_person" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/person1"
            android:layout_marginBottom="@dimen/view_spacing"
            android:layout_marginStart="@dimen/grid_spacing"
            android:layout_toEndOf="@+id/person1"
            android:clickable="true"
            android:maxLines="4"
            android:text="@string/click_here"
            android:textColor="@color/navy"
            android:textSize="@dimen/item_subtitle" />

        <TextView
            android:id="@+id/loadMoreReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_text"
            android:layout_centerHorizontal="true"
            android:background="@drawable/load_more"
            android:paddingBottom="@dimen/grid_spacing"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/loadmore_vertical_spacing"
            android:text="@string/more_reviews"
            android:textColor="@color/off_white"
            android:textSize="@dimen/item_title"
            android:textStyle="bold"
            android:typeface="sans" />


    </RelativeLayout>

</android.support.v7.widget.CardView>

