<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <!-- Include statusBar here for Kitkat only here -->

    <include layout="@layout/statusbar" />

    <!-- Include ToolBar here -->

    <include layout="@layout/toolbar" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2_changelocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- android:background="@drawable/rounded_edittext" -->

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView_real"
                android:layout_width="match_parent"
                android:layout_height="@dimen/autocomplete_tv_height"
                android:layout_marginBottom="@dimen/view_spacing"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="0dp"
                android:layout_marginTop="@dimen/view_spacing"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/enter_few_letters"
                android:imeOptions="actionSearch"
                android:inputType="textAutoComplete"
                android:maxLength="30"
                android:padding="@dimen/view_spacing" />

            <ImageButton
                android:id="@+id/searchAutoComp_b"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/autocomplete_tv_height"
                android:layout_alignBottom="@+id/autoCompleteTextView_real"
                android:layout_alignEnd="@+id/autoCompleteTextView_real"
                android:contentDescription="@string/content"
                android:src="@drawable/ic_action_search" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/red"
            android:contentDescription="@string/app_name" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/streetview_b"
            android:layout_below="@+id/autoCompleteTextView1"
            android:layout_marginEnd="@dimen/key_line_1"
            android:layout_marginStart="@dimen/key_line_1"
            android:maxWidth="@dimen/max_width_layout" />

        <Button
            android:id="@+id/streetview_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/blue_button"
            android:contentDescription="@string/street_view"
            android:text="@string/street_view"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>