<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_contact"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/view_spacing"
    android:layout_marginStart="@dimen/key_line_1"
    android:layout_marginEnd="@dimen/key_line_1"
    android:layout_marginTop="@dimen/card_margin_top"
    android:background="@color/red"
    android:clickable="true"
    android:elevation="@dimen/cardview_default_elevation"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin_top">

        <TextView
            android:id="@+id/contactDetails1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/view_spacing"
            android:background="@color/blue_singleborder_a"
            android:paddingBottom="@dimen/view_spacing"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="0dp"
            android:paddingTop="@dimen/view_spacing"
            android:text="@string/contact_details"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imagePhone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/contactDetails1"
            android:layout_margin="@dimen/view_spacing"
            android:contentDescription="@string/content"
            android:src="@drawable/ic_action_call" />

        <TextView
            android:id="@+id/phone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imagePhone1"
            android:layout_toEndOf="@+id/imagePhone1"
            android:clickable="true"
            android:maxLines="1"
            android:text="@string/phone"
            android:textColor="@color/navy"
            android:textSize="@dimen/item_title" />

        <ImageView
            android:id="@+id/imageWeb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagePhone1"
            android:layout_margin="@dimen/view_spacing"
            android:contentDescription="@string/content"
            android:src="@drawable/ic_action_web_site" />

        <TextView
            android:id="@+id/website1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageWeb1"
            android:layout_toEndOf="@+id/imageWeb1"
            android:clickable="true"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/text_here"
            android:textColor="@color/navy"
            android:textSize="@dimen/item_title" />

        <ImageView
            android:id="@+id/imageWeb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageWeb1"
            android:layout_margin="@dimen/view_spacing"
            android:contentDescription="@string/content"
            android:src="@drawable/ic_action_web_site" />

        <TextView
            android:id="@+id/website2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageWeb2"
            android:layout_toEndOf="@+id/imageWeb2"
            android:clickable="true"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/text_here"
            android:textColor="@color/navy"
            android:textSize="@dimen/item_title" />

    </RelativeLayout>

</android.support.v7.widget.CardView>

